--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 plugins: [jekyll-include-cache]
 remote_theme: "mmistakes/minimal-mistakes@4.21.0"
-minimal_mistakes_skin: "aqua" # "air", "default", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: "contrast" # "air", "aqua", "default", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 
